<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".Login"
    android:layout_margin="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lgn"
        android:text="@string/login"
        />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_marginTop="10dp">
       <TextView
           android:id="@+id/registerNow"
          android:layout_gravity="start"
           android:layout_marginTop="8dp"
           android:textStyle="bold"
           android:layout_marginRight="100dp"
           android:text="@string/click_to_register"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           />

       <TextView
           android:id="@+id/fgPassword"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
           android:layout_marginTop="8dp"
           android:text="Forgot Password?"
           android:textStyle="bold"/>
   </LinearLayout>



</LinearLayout>